the project 1 img was changed and css was adapated for this img

--- a/style.css
+++ b/style.css
@@ -383,8 +383,10 @@ article .icon {
 }
 
 .project-title {
-  margin: 1rem;
   color: black;
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin: 1rem;
 }
 
 .project-btn {
