--- a/style.css
+++ b/style.css
@@ -48,13 +48,15 @@ nav {
   font-size: 1.5rem;
 }
 
-a {
+.menu-links a,
+.nav-links a {
   color: black;
   text-decoration: none;
   text-decoration-color: white;
 }
 
-a:hover {
+.menu-links a,
+.nav-links a:hover {
   color: gray;
   text-decoration: underline;
   text-underline-offset: 1rem;
@@ -263,6 +265,7 @@ section {
 
 .btn-color-2 {
   background: none;
+  color: black;
 }
 
 .btn-color-2:hover {
@@ -371,27 +374,55 @@ article .icon {
   position: relative;
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+.project {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  width: 1080px;
+  /* height: 300px; */
+  margin: 2rem 0 8rem;
+}
+
+.project-left {
+  height: 100%;
+}
+
+.project-img-container {
+  width: 400px;
+  height: 100%;
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
 }
 
-.project-title {
-  color: black;
-  font-weight: 500;
-  font-size: 1.5rem;
-  margin: 1rem;
+.project-right {
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.project-tools {
+  display: flex;
+}
+
+.project-tools__item {
+  list-style: none;
+  padding-right: 1rem;
+}
+
+.project-description {
+  margin: 2rem 0;
 }
 
 .project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+  display: inline-block;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 /* CONTACT SECTION */
@@ -426,6 +457,19 @@ article .icon {
   font-size: larger;
 }
 
+.contact-info-container a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+.contact-info-container a:hover {
+  color: gray;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+}
+
 .contact-icon {
   cursor: default;
 }
@@ -436,11 +480,11 @@ article .icon {
 
 /* FOOTER */
 
-footer {
+.footer {
   height: 26vh;
   margin: 0 1rem;
 }
 
-footer p {
+.footer p {
   text-align: center;
 }
