--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -88,6 +88,10 @@
     margin-bottom: 2rem;
   }
 
+  #about {
+    margin-bottom: 5rem;
+  }
+
   .about-containers,
   .contact-info-upper-container,
   .btn-container {
@@ -96,7 +100,11 @@
 
   .projects-details-container {
     padding: 0;
-    margin: 6em 0;
+    /* margin: 6em 0; */
+  }
+
+  #projects {
+    margin-bottom: 5rem;
   }
 
   .project {
