--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1400px) {
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
   #profile {
     height: 83vh;
     margin-bottom: 6rem;
@@ -8,13 +8,14 @@
     flex-wrap: wrap;
   }
 
-  .project-right-2 {
-    padding-right: 0;
+  .project-description {
+    margin: 2rem 0;
+    padding-right: 2rem;
   }
 }
 
 /* LAPTOP */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   #desktop-nav {
     display: none;
   }
@@ -130,7 +131,10 @@
 
   .project-right-2 {
     align-items: center;
-    padding: 0;
+  }
+
+  .project-description{
+    margin-right: 0;
   }
 
   .contact-info-upper-container {
