--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
   --border-radius: 2rem;
   --transition-speed: 300ms;
   --transition-speed-fast: 100ms;
+  --img-filter: invert(0%);
 }
 
 .dark-mode {
@@ -50,6 +51,7 @@
   --color-border: rgb(80, 80, 80);
   --color-border-secondary: rgb(100, 100, 100);
   --color-background-secondary: rgb(45, 45, 45);
+  --img-filter: invert(100%);
 }
 
 body {
@@ -272,6 +274,8 @@ section {
 .icon {
   cursor: pointer;
   height: 2rem;
+  transition: filter 0.3s ease;
+  filter: var(--img-filter);
 }
 
 /* BUTTONS */
@@ -475,7 +479,8 @@ article .icon {
 }
 
 .project-description {
-  margin: 2rem 0;
+  margin: 2rem 1rem 2rem 0;
+  /* padding-right: 7rem */
 }
 
 .project-btn {
